# FinSync

./: .replit  README.md  govt-portal.html  package-lock.json  package.json  pyproject.toml  replit.md  show_extracted_data.py  start_backend.py  start_python_backend.py  tailwind.config.ts  test_invoice.txt
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1755680004596_1755680004598.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1756366678064_1756366678066.txt  Pasted--canvas-id-grid-canvas-script-const-canvas-document-getElementById-grid-const-ctx--1756189941870_1756189941871.txt  Pasted--version-1-0-title-FYNSYNC-Alternate-Corporate-Intro-brand-name--1756047055913_1756047055914.txt  Pasted-import-motion-from-framer-motion-import-useQuery-from-tanstack-react-query-import-B-1756192280270_1756192280271.txt  _1755681198276.env  gemini_client_1755681220681.py  gst_extraction_graph_1755681258745.py  main_1755681198277.py  ocr_agent_1755681235701.py  parser_agent_1755681235694.py  pdf_utils_1755681220682.py  requirements_1755681198277.txt  validator_agent_1755681235700.py  writer_agent_1755681235695.py
client/src/: App.tsx  index.css
python_backend/: main.py  requirements.txt  simple_server.py  test_excel_generation.py
python_backend/agents/: ocr_agent.py  parser_agent.py  validator_agent.py  writer_agent.py
python_backend/graphs/: gst_extraction_graph.py
python_backend/output/: Sample_GST_Extract.xlsx  (+1 more)
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
(+30 files in other folders)
